--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,14 +12,20 @@ h1 {}
 .logo {
 	color: mediumAquamarine;
 	display: inline-flex;
+	font-size: 14px;
 }
 
 .navigation {
 	display: inline-flex;
-	justify-content: space-around;
-	margin: 5px;
+	display: 
+	
 }
 
 a {
 	color: black;
+}
+
+.navigation li {
+	display: inline-block;
+	
 }
